@@ -32,6 +32,8 @@ Version 1.7.2
        log dialog. (Stefan)
 - BUG: Issue #130: out-of-date update
        misses dragged items. (Stefan)
+- BUG: Issue #132: Cleanup fails to find
+       externals in subfolders. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
